test/types/sync/ferguson/sync-autocopy-memory-error.good
sync-autocopy-memory-error.chpl:4: error: halt reached - Cannot return an implicit copy of a sync variable
